<resources>
    <string name="app_name">The SameSkincare</string>
    <string name="dang_nhap">Đăng nhập</string>
    <string name="same_skincare">Same Skincare</string>
    <string name="tai_khoan">Tài khoản</string>
    <string name="mat_khau">Mật khẩu</string>
    <string name="quen_mk">Quên mật khẩu</string>
    <string name="dang_ky">Đăng ký</string>
    <string name="nhap_ht">Nhập họ tên</string>
    <string name="nhap_email">Địa chỉ Email</string>
    <string name="nhap_lai_mk">Nhập lại mật khẩu</string>
    <string name="dong_y">Tôi đông ý với tất cả các điều khoản của Same Skin</string>
</resources>
